--- a/about.html
+++ b/about.html
@@ -7,23 +7,26 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="navbar navbar-expand-lg sticky-top">
-    <a class="navbar-brand" href="index.html">
-      <img src="images/evilpig-logo.png" alt="EvilPig Logo" class="logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="companies.html">Companies</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
+  <header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/evilpig-logo.png" alt="EvilPig Logo" class="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="companies.html">Companies</a></li>
+          <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </header>
 
@@ -36,7 +39,7 @@
     </div>    
 
     <!-- Our Story Section -->
-    <section class="our-story mt-5">
+    <section class="our-story mt-5 py-5">
       <div class="container">
         <h2 class="text-center section-title">Nuestra Historia</h2>
         <p class="text-center">EvilPig se funda con la visión de apoyar al crecimiento de las personas y los negocios tradicionales. Nuestra trayectoria está ligada a la innovación, el crecimiento y el compromiso de lograr que nuestros clientes logren sus objetivos personasles y profesionales</p>
@@ -51,21 +54,21 @@
         <div class="row">
           <div class="col-md-4 text-center">
             <div class="icon-box mb-4">
-              <i class="fas fa-bullseye fa-3x text-primary"></i>
+              <img src="path/to/mission.jpg" alt="Misión" class="img-fluid mb-4">
             </div>
             <h3 class="feature-title">Misión</h3>
             <p>Desarrollar, crecer y escalar negocios provocando así el crecimiento de las personas.</p>
           </div>
           <div class="col-md-4 text-center">
             <div class="icon-box mb-4">
-              <i class="fas fa-eye fa-3x text-success"></i>
+              <img src="path/to/vision.jpg" alt="Visión" class="img-fluid mb-4">
             </div>
             <h3 class="feature-title">Visión</h3>
             <p>Ser la firma de mayor confianza y respeto en la industria, reconocida por su compromiso y excelencia profesional.</p>
           </div>
           <div class="col-md-4 text-center">
             <div class="icon-box mb-4">
-              <i class="fas fa-heart fa-3x text-info"></i>
+              <img src="path/to/values.jpg" alt="Valores" class="img-fluid mb-4">
             </div>
             <h3 class="feature-title">Valores</h3>
             <p>Integridad, Innovación, Excelencia, Equipo, Transparencia.</p>
@@ -75,7 +78,7 @@
     </section>
 
     <!-- Achievements & Recognitions Section -->
-    <section class="achievements-recognitions mt-5 bg-light py-5">
+    <section class="achievements-recognitions mt-5 py-5">
       <div class="container">
         <h2 class="text-center section-title">Logros y Reconocimientos</h2>
         <p class="text-center">We are proud of the numerous awards and recognitions we have received over the years. Our commitment to excellence and innovation has been acknowledged by industry leaders and peers.</p>
@@ -83,7 +86,7 @@
     </section>
 
     <!-- Clients & Projects Section -->
-    <section class="clients-projects mt-5">
+    <section class="clients-projects mt-5 py-5 bg-light">
       <div class="container">
         <h2 class="text-center section-title">Clients & Projects</h2>
         <p class="text-center">We have had the privilege of working with a diverse range of clients across various industries. Here are some of the projects that highlight our expertise and commitment to delivering value.</p>
@@ -91,7 +94,7 @@
     </section>
 
     <!-- Corporate Social Responsibility Section -->
-    <section class="corporate-social-responsibility mt-5 bg-light py-5">
+    <section class="corporate-social-responsibility mt-5 py-5">
       <div class="container">
         <h2 class="text-center section-title">Corporate Social Responsibility</h2>
         <p class="text-center">At EvilPig, we believe in giving back to the community. Our CSR initiatives focus on sustainability, education, and community development. We are committed to making a positive impact on society and the environment.</p>
@@ -100,7 +103,9 @@
   </main>
 
   <footer class="mt-5 bg-dark text-white text-center py-3">
-    <p>&copy; 2024 EvilPig. All rights reserved.</p>
+    <div class="container">
+      <p>&copy; 2024 EvilPig. Todos los derechos reservados.</p>
+    </div>
   </footer>
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -109,4 +114,3 @@
   <script src="js/scripts.js"></script>
 </body>
 </html>
-
