--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="navbar navbar-expand-lg sticky-top">
-    <a class="navbar-brand" href="index.html">
-      <img src="images/evilpig-logo.png" alt="EvilPig Logo" class="logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="companies.html">Companies</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
+  <header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/evilpig-logo.png" alt="EvilPig Logo" class="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="companies.html">Companies</a></li>
+          <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </header>
 
@@ -36,81 +39,100 @@
       </div>
     </div>
 
-    <section class="impulse mt-5 bg-light py-5">
+    <!-- Nuestro Impulso Section with Images -->
+    <section class="impulse mt-5 py-5">
       <div class="container">
         <h2 class="text-center section-title">Nuestro Impulso</h2>
-        <div class="row">
-          <div class="col-md-6 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-chart-pie fa-3x text-danger"></i>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/profit.jpg" alt="Generar ganancias" class="img-fluid mb-4">
+                <h3 class="feature-title">Generar ganancias</h3>
+                <p>Superiores a las que el negocio genera hoy en día</p>
+              </div>
             </div>
-            <h3 class="feature-title text-danger">Generar ganancias</h3>
-            <p>Superiores a las que el negocio genera hoy en día</p>
           </div>
-          <div class="col-md-6 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-bullseye fa-3x text-warning"></i>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/positioning.jpg" alt="Posicionar empresas" class="img-fluid mb-4">
+                <h3 class="feature-title">Posicionar empresas</h3>
+                <p>Volviéndolas atractivas en el mercado</p>
+              </div>
             </div>
-            <h3 class="feature-title text-warning">Posicionar empresas</h3>
-            <p>Volviéndolas atractivas en el mercado</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="features mt-5">
+    <!-- Modelo Co-Evolution Section with Images -->
+    <section class="features mt-5 py-5 bg-light">
       <div class="container">
         <h2 class="text-center section-title">Modelo Co-Evolution</h2>
-        <div class="row">
-          <div class="col-md-4 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-chart-line fa-3x text-primary"></i>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/improvement.jpg" alt="Modelo de analítica avanzada" class="img-fluid mb-4">
+                <h3 class="feature-title">Modelo de analítica avanzada</h3>
+                <p>Diseñado para identificar las áreas de mayor oportunidad</p>
+              </div>
             </div>
-            <h3 class="feature-title text-primary">Modelo de analítica avanzada</h3>
-            <p>Diseñado para identificar las áreas de mayor oportunidad</p>
           </div>
-          <div class="col-md-4 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-rocket fa-3x text-success"></i>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/method.jpg" alt="Modelo de aceleración" class="img-fluid mb-4">
+                <h3 class="feature-title">Modelo de aceleración</h3>
+                <p>Para la rentabilidad del negocio en un periodo de 1 a 5 años</p>
+              </div>
             </div>
-            <h3 class="feature-title text-success">Modelo de aceleración</h3>
-            <p>Para la rentabilidad del negocio en un periodo de 1 a 5 años</p>
           </div>
-          <div class="col-md-4 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-check-circle fa-3x text-info"></i>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/acelerate.jpg" alt="Metodologías probadas" class="img-fluid mb-4">
+                <h3 class="feature-title">Metodologías probadas</h3>
+                <p>Basadas en nuestra experiencia con empresas enterprise, entre ellas Fortune 500</p>
+              </div>
             </div>
-            <h3 class="feature-title text-info">Metodologías probadas</h3>
-            <p>Basadas en nuestra experiencia con empresas enterprise, entre ellas Fortune 500</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="revenue mt-5">
+    <!-- Objetivos Section with Images -->
+    <section class="revenue mt-5 py-5">
       <div class="container">
         <h2 class="text-center section-title">Objetivos</h2>
-        <div class="row">
-          <div class="col-md-4 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-dollar-sign fa-3x text-primary"></i>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/4x.jpg" alt="4X" class="img-fluid mb-4">
+                <h3 class="feature-title">4X</h3>
+                <p>Crecimiento del valor mercado</p>
+              </div>
             </div>
-            <h3 class="feature-title text-primary">4X</h3>
-            <p>Crecimiento del valor mercado</p>
           </div>
-          <div class="col-md-4 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-user-friends fa-3x text-success"></i>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/growth.jpg" alt="Libertad" class="img-fluid mb-4">
+                <h3 class="feature-title">Libertad</h3>
+                <p>Autonomía del negocio y generación de patrimonio</p>
+              </div>
             </div>
-            <h3 class="feature-title text-success">Libertad</h3>
-            <p>Autonomía del negocio y generación de patrimonio</p>
           </div>
-          <div class="col-md-4 text-center">
-            <div class="icon-box mb-4">
-              <i class="fas fa-chart-line fa-3x text-info"></i>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-body">
+                <img src="images/brand.jpg" alt="Marca" class="img-fluid mb-4">
+                <h3 class="feature-title">Marca</h3>
+                <p>Atractiva para el mercado</p>
+              </div>
             </div>
-            <h3 class="feature-title text-info">Marca</h3>
-            <p>Atractiva para el mercado</p>
           </div>
         </div>
       </div>
@@ -118,7 +140,9 @@
   </main>
   
   <footer class="mt-5 bg-dark text-white text-center py-3">
-    <p>&copy; 2024 EvilPig. Todos los derechos reservados.</p>
+    <div class="container">
+      <p>&copy; 2024 EvilPig. Todos los derechos reservados.</p>
+    </div>
   </footer>
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -127,4 +151,3 @@
   <script src="js/scripts.js"></script>
 </body>
 </html>
-
