--- a/about.html
+++ b/about.html
@@ -54,21 +54,21 @@
         <div class="row">
           <div class="col-md-4 text-center">
             <div class="icon-box mb-4">
-              <img src="path/to/mission.jpg" alt="Misión" class="img-fluid mb-4">
+              <img src="images/mision.jpg" alt="Misión" class="img-fluid mb-4">
             </div>
             <h3 class="feature-title">Misión</h3>
             <p>Desarrollar, crecer y escalar negocios provocando así el crecimiento de las personas.</p>
           </div>
           <div class="col-md-4 text-center">
             <div class="icon-box mb-4">
-              <img src="path/to/vision.jpg" alt="Visión" class="img-fluid mb-4">
+              <img src="images/vision.jpg" alt="Visión" class="img-fluid mb-4">
             </div>
             <h3 class="feature-title">Visión</h3>
             <p>Ser la firma de mayor confianza y respeto en la industria, reconocida por su compromiso y excelencia profesional.</p>
           </div>
           <div class="col-md-4 text-center">
             <div class="icon-box mb-4">
-              <img src="path/to/values.jpg" alt="Valores" class="img-fluid mb-4">
+              <img src="images/values.jpg" alt="Valores" class="img-fluid mb-4">
             </div>
             <h3 class="feature-title">Valores</h3>
             <p>Integridad, Innovación, Excelencia, Equipo, Transparencia.</p>
